--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,6 +215,9 @@ img {
 
 #navigation-logo {
   width: 2in;
+  transform-origin: left top;
+  transform: scale(1.5);
+  padding-bottom: 15px;
 }
 
 @media screen and (max-width: 767.5px) {
@@ -1563,6 +1566,7 @@ a.contact-link:hover {
   padding-top: 120px;
   padding-bottom: 100px;
 }
+
 
 /* Prevent big gap at the bottom of the section */
 @media (min-width: 2000px) {
