Made changes to Timeline section - Change background color - Added logo2025 - Added dottedline and more beads

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -974,9 +974,7 @@ span.text {
   line-height: 1.5;
   font-weight: 400;
   color: white;
-  background: linear-gradient(to top, #c5047e 0%, #5f00dc 100%);
-    )
-    top;
+  background: linear-gradient(to top, #6060ff 0%, #030068 100%);
 }
 
 .line_section {
@@ -1007,15 +1005,55 @@ span.text {
   border-radius: 50%;
   background-color: #fff;
   box-shadow: 0 0 10px #fff;
+  transform: translateX(-50%);
+}
+
+.bead_end {
   left: 50%;
   top: 20%;
-  transform: translateX(-50%);
+}
+
+.bead_start {
+  left: calc(40% + 1rem);
+  top: 20%;
+}
+
+.line_section:nth-child(odd) .bead_start {
+  left: calc(60% - 1rem);
+}
+
+.dotted_line {
+  position: absolute;
+  border: none;
+  border-top: 5px dotted #fff;
+  background: transparent;
+
+  height: 0;
+  width: calc(10% - 1rem);
+  top: -25%;
+  right: 50%;
+}
+
+.line_section:nth-child(odd) .dotted_line {
+  left: 50%;
+}
+
+.long_content .dotted_line {
+  top: calc(-10% + 0.25rem);
+}
+
+.content8 .dotted_line{
+  top: calc(-10% - 0.75rem);
 }
 
 .content {
   /* transform: translateY(-80%); */
   width: calc(50%-2rem);
   word-wrap: break-word;
+}
+
+.content_title {
+  display: flex;
 }
 
 .long_content {
@@ -1050,6 +1088,10 @@ span.text {
   margin: 0 auto;
 }
 
+#timeline-logo {
+  width: 70%;
+}
+
 .top-section h1 {
   color: #fff;
 }
@@ -1067,6 +1109,7 @@ span.text {
   top: -50px;
   bottom: -50px;
   background-color: #fff;
+  box-shadow: 0 0 10px #fff;
   display: none;
 }
 
@@ -1079,6 +1122,7 @@ span.text {
   width: 1rem;
   border-radius: 50%;
   background-color: #fff;
+  box-shadow: 0 0 10px #fff;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -1098,6 +1142,9 @@ span.text {
 
 /* responsive page for timeline for medium screen */
 @media screen and (max-width: 900px) {
+  .dotted_line {
+    top: calc(-25% - 0.25rem);
+  }
   /* count down sector */
   .count_down {
     display: grid;
@@ -1128,6 +1175,18 @@ span.text {
   }
   .line_section h2{
     font-size: 0.8rem;
+  }
+  .dotted_line {
+    top: calc(-25% - 0.75rem);
+  }
+  .long_content .dotted_line {
+    top: calc(-25% - 0.25rem);
+  }
+  .content3 .dotted_line {
+    top: calc(-25% - 0.25rem);
+  }
+  .content7 .dotted_line {
+    top: calc(-25% + 0.75rem);
   }
   /* count down sector */
   .count_down {
