--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,8 +502,7 @@ img {
 }
 /*===================================== ABOUTUS SECTION =====================================*/
 .aboutus-section {
-  background: linear-gradient(to bottom, #06104F, #381454, #32176C);
-  color: white;
+  color: #000000;
   padding-top: 5rem;
   padding-bottom: 4.5rem;
 }
@@ -545,48 +544,51 @@ img {
 .objective-textbox1 {
   box-sizing: border-box;
   width: 80%;
+  background: linear-gradient(to right, #90b3ef, #4367ff);
   padding: 20px 60px 20px 40px;
-  border: 3px solid #FFEC83;
-  border-radius: 0px 50px;
+  border: 3px solid #4367ff;
+  border-radius: 10px;
   margin: 10px;
   transition: all 0.5s ease;
 }
 
 .objective-textbox1:hover {
   transform: scale(1.1);
-  box-shadow: 0px 0px 10px #F6F7A9;
+  box-shadow: 0px 0px 10px #90b3ef;
 }
 
 
 .objective-textbox2 {
   box-sizing: border-box;
   width: 80%;
+  background: linear-gradient(to right, #90b3ef, #4367ff);
   padding: 20px 60px 20px 40px;
-  border: 3px solid #FFEC83;
-  border-radius: 0px 50px;
+  border: 3px solid #4367ff;
+  border-radius: 10px;
   margin: 10px;
   transition: all 0.5s ease;
 }
 
 .objective-textbox2:hover {
   transform: scale(1.1);
-  box-shadow: 0px 0px 10px #F6F7A9;
+  box-shadow: 0px 0px 10px #90b3ef;
 }
 
 
 .objective-textbox3 {
   box-sizing: border-box;
   width: 80%;
+  background: linear-gradient(to right, #90b3ef, #4367ff);
   padding: 20px 60px 20px 40px;
-  border: 3px solid #FFEC83;
-  border-radius: 0px 50px;
+  border: 3px solid #4367ff;
+  border-radius: 10px;
   margin: 10px;
   transition: all 0.5s ease;
 }
 
 .objective-textbox3:hover {
   transform: scale(1.1);
-  box-shadow: 0px 0px 10px #F6F7A9;
+  box-shadow: 0px 0px 10px #90b3ef;
 }
 
 
@@ -612,6 +614,7 @@ img {
   justify-content: center;
   align-items: center;
 }
+
 
 @media only screen and (max-width: 575.5px) {
   .objective-container {
@@ -694,6 +697,47 @@ img {
       transition: all 0.5s ease;
     }
   }
+  @media only screen and (max-width: 975.5px){
+    .background-elements {
+      position: relative;
+    }
+    
+    .curve-star {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 100px;
+      height: auto;
+      z-index: -1; 
+    }
+    
+    .top-left-doodle {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 150px;
+      height: auto;
+      z-index: -1;
+    }
+    
+    .bottom-right-doodle {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 150px;
+      height: auto;
+      z-index: -1;
+    }        
+  }
+  @media only screen and (max-width: 100px) {
+    .bulb-icon {
+      position: absolute;
+      top: -10px; 
+      right: 10px; 
+      width: 40px; 
+      height: auto;
+    }
+  }  
 }
 /* ==================================== OVERVIEW SECTION ==================================== */
 
@@ -972,8 +1016,7 @@ span.text {
   font-weight: 400;
   color: white;
   background: linear-gradient(to top, #c5047e 0%, #5f00dc 100%);
-    )
-    top;
+   
 }
 
 .line_section {
