--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,7 @@ img {
 
 /* scroll-header */
 .scroll-header {
-  /*box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);*/
+  box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
 }
 
 /*  =================== 
