Added FAQ and Footer sections - Added new FAQ card cover image (assets/images/faq_card_cover.png) - Updated background, and border radius of FAQ card in assets/css/style.css - Changed background color of countdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1145,8 +1145,9 @@ span.text {
   justify-content: center;
   justify-self: center;
   align-items: center;
-  margin: 50px;
+  padding: 50px;
   gap: 30px;
+  background: #000000;
 }
 
 /* responsive page for timeline for medium screen */
@@ -1210,7 +1211,7 @@ span.text {
 }
 
 .count_down h2 {
-  color: #000;
+  color: #fff;
   text-align: center;
   margin-bottom: var(--mb-2-5);
 }
@@ -1219,7 +1220,7 @@ span.text {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #fff;
+  background: #000;
   gap: 30px;
 }
 
@@ -1259,7 +1260,7 @@ span.text {
   position: absolute;
   text-align: center;
   font-weight: var(--font-medium);
-  color: #000000;
+  color: #fff;
   font-size: 1.5rem;
 }
 
@@ -1270,7 +1271,7 @@ span.text {
   font-weight: 300;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: #000000;
+  color: #fff;
 }
 
 .count_down_timer .dots {
@@ -1297,7 +1298,9 @@ span.text {
 
 /*===================================== FAQ SECTION =====================================*/
 #faq {
-  background-image: linear-gradient(to bottom, #300a6e, #c10a2b);
+  background-image: radial-gradient(circle, 
+                  rgba(54, 81, 200, 0.75) -20%,
+                  rgba(0,0,0,1) 55%);
 }
 
 #faq a {
@@ -1306,42 +1309,44 @@ span.text {
 }
 
 #faq a:hover {
-  color: #a27ce0;
   transform: scale(2);
 }
 
-#faq a:hover:visited {
-  color: #a27ce0;
-}
-
-#faq a:visited {
-  color: #300a6e;
-}
-
 .accordion {
-  --bs-accordion-border-radius: 0;
-  --bs-accordion-inner-border-radius: 0;
+  --bs-accordion-border-radius: 10px;
+  --bs-accordion-inner-border-radius: 10px;
   --bs-accordion-btn-focus-box-shadow: 0;
   --bs-accordion-border-width: 0;
 }
 
+.accordion-item {
+  background: linear-gradient(to right, #000000 0%, #4367ff 50%, #90b3e7 100%);
+  border-radius: 10px;
+}
+
 .accordion-body {
   font-weight: 500;
-  background-color: #a27ce0;
+  background: linear-gradient(to right, #000000 0%, #4367ff 50%, #90b3e7 100%);
   color: white;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .accordion-button {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
   font-size: large;
+  color: white;
   transition: all 0.4s ease-out;
+
+  background-image: url(../images/faq_card_cover.png);
+  background-size: cover;
+  border-radius: 10px;
 }
 
 .accordion-button:hover {
   transform: scale(1.08);
-  background-color: #eae7f1;
-  color: #2b0963;
+  color: #000000;
 }
 
 .accordion-button:not(.collapsed) {
@@ -1460,7 +1465,9 @@ span.text {
 
 /*===================================== FOOTER SECTION =====================================*/
 footer {
-  background-image: linear-gradient(#c10a2b, #950a3f, #300a6e);
+  background-image: linear-gradient(to bottom, 
+                  rgba(0,0,0,1) 40%, 
+                  rgba(67,103,255,1) 120%);
   margin: 0;
   padding: 12px;
 }
@@ -1554,7 +1561,7 @@ a.contact-link {
 }
 
 a.contact-link:hover {
-  color: #00008b;
+  color: #90b3e7;
 }
 
 .m0 {
