--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -514,6 +514,7 @@ img {
 }
 
 .aboutus-title {
+  position: relative;
   color: white;
   text-align: center;
   font-weight: bold;
@@ -559,7 +560,7 @@ img {
   width: 80%;
   background: #000000;
   padding: 20px 60px 20px 40px;
-  border: 3px solid #4367ff;
+  border: 3px solid #4367ff !important;
   border-radius: 20px;
   margin: 10px;
   transition: all 0.5s ease;
@@ -745,7 +746,7 @@ img {
 
 @media only screen and (max-width: 500px) {
   .design-container.purple-blur-top-left {
-    width: 50rem; 
+    width: 54rem; 
     left: 0;
     top: 0rem;  
 }
@@ -753,7 +754,7 @@ img {
     width: 30rem;
     height:8rem;
     right: 0rem;
-    bottom: 5rem;
+    bottom: 12rem;
   }
 }
 
