--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,11 @@ img {
 }
 
 /*===================================== HOMEPAGE SECTION =====================================*/
+#home {
+  background: linear-gradient(to right, black 15%, #333a66 65%, #5f82f8 100%);
+  color: white; /* Ensures text remains readable */
+}
+
 .tagline h1 {
   font-size: var(--extra-big-font-size);
   font-weight: 700;
@@ -258,7 +263,7 @@ img {
 }
 
 .gradient-background {
-  background: linear-gradient(109.6deg, rgb(9, 9, 121) 11.2%, rgb(144, 6, 161) 53.7%, rgb(0, 212, 255) 100.2%);
+  background: linear-gradient(109.6deg, rgb(255, 255, 255) 11.2%, rgb(255, 255, 255) 53.7%, rgb(255, 255, 255) 100.2%);
   background-size: 800% 800%;
   -webkit-animation: gradient 12s ease-in-out infinite;
   animation: gradient 12s ease-in-out infinite;
@@ -377,18 +382,18 @@ img {
   width: 200px;
   border-top: 2.5rem;
   transition: 2s;
-  background: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
-
+  background: linear-gradient(90deg, #ffffff 0%, #5f82f8 29%, #333a66  87%, #000000 100%);
 }
 
+
 .button_join:hover {
-  width: 300px;
+  width: 250px;
   transition: 2s;
   box-shadow: 0 0 10px var(--dark-blue-color);
 }
 
 .area {
-  background: #fff;
+  background: #ffffff;
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
   width: 100%;
   height: 100vh;
