--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1215,6 +1215,20 @@ span.text {
   background: #000000;
 }
 
+.countdown-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; /* Allows wrapping for small screens */
+  gap: 20px; /* Adds spacing between countdown items */
+}
+
+.countdown-item {
+  flex: 1; /* Makes items flexible */
+  min-width: 120px; /* Ensures they don’t shrink too much */
+  text-align: center;
+}
+
 /* responsive page for timeline for medium screen */
 @media screen and (max-width: 900px) {
   .dotted_line {
@@ -1300,8 +1314,8 @@ span.text {
 
 .circle svg {
   position: relative;
-  width: 150px;
-  height: 150px;
+  max-width: 100%;
+  height: auto;
   transform: rotate(270deg);
 }
 
