register, tnc, tab icon, fix countdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1207,6 +1207,7 @@ span.text {
 
 .count_down {
   display: flex;
+  width: 2000px;
   justify-content: center;
   justify-self: center;
   align-items: center;
