--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,7 @@ img {
     }
     
     .nav-item a:hover {
-      color: rgb(126, 111, 188);
+      color: rgb(117, 99, 189);
     }
     
     .navbar {
@@ -238,11 +238,11 @@ img {
     }
     
     .navbar-toggler {
-      background-color: rgb(0, 0, 0);
+      background-color: #010101;
     }
     
     .navbar-toggler:hover {
-      color: rgb(126, 111, 188);
+      color: rgb(117, 99, 189);
     }
 
 /*===================================== HOMEPAGE SECTION =====================================*/
