--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,12 @@ img {
     }
     
     .navbar-toggler {
-      background-color: #010101;
+      background-color: black; /* Set background to black */
+      border: none; /* Optional: Remove border */
+    }
+    
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=UTF8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
     }
     
     .navbar-toggler:hover {
