--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ img {
     }
     
     .navbar-toggler {
-      background-color: black; /* Set background to black */
+      background-color: #FFFFFF; /* Set background to black */
       border: none; /* Optional: Remove border */
     }
     
