--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,7 +659,7 @@ img {
   position: relative;
   text-align: center;
   padding: 5px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .small-bulb-icon {  
@@ -683,10 +683,10 @@ img {
 }
 
 .design-container.purple-blur-bottom-right { 
-  position: absolute;   
+  position: relative;   
   width: 80rem;
   height: 2rem;
-  z-index: 0;
+  z-index: 1;
 }
 
 
@@ -761,11 +761,10 @@ img {
     left: 0;
     top: 0rem;  
 }
-  .design-container.purple-blur-bottom-right {  
-    width: 30rem;
-    height:8rem;
-    right: 0rem;
-    bottom: 12rem;
+  .design-container.purple-blur-bottom-right {      
+    width: 40rem;
+    height:0rem;
+    bottom: 25rem;
   }
 }
 
