--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,13 @@
         el-screen: 1199.5px; */
 }
 
+@font-face {
+  font-family: 'Codec Pro';
+  src: url('../fonts/codec-pro-regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* predefined font size for large screen to make sure our website is responsive */
 @media screen and (min-width: 968px) {
   :root {
@@ -253,11 +260,26 @@ img {
   color: white; /* Ensures text remains readable */
 }
 
+.tagline-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center; /* Centers the button horizontally relative to the text */
+}
+
+.tagline {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centers the lines among themselves */
+}
+
 .tagline h1 {
-  font-size: var(--extra-big-font-size);
-  font-weight: 700;
+  font-size: 4.5rem;
+  font-family: 'Codec Pro', sans-serif;
+  font-weight: 600;
   -webkit-background-clip: text;
   background-clip: text;
+  text-align: left; /* Keeps the text left-aligned */
   color: transparent;
 }
 
@@ -271,8 +293,15 @@ img {
 
 
 @media screen and (min-width: 991.5px) {
+  .floating-robot {
+    display: flex;
+    justify-content: flex-end; /* Pushes the robot to the right */
+    align-items: center;
+  }
+
   .robot {
-    position: relative;
+    /* position: relative; */
+    right: 5%; /* Moves it more to the right */
     top: 40px;
     width: 300px;
     animation: float 6s ease-in-out infinite;
@@ -380,15 +409,31 @@ img {
 }
 
 .button_join {
-  width: 200px;
-  border-top: 2.5rem;
+  display: flex;
+  align-items: center; /* Aligns content to the bottom */
+  justify-content: center; /* Centers text and image */
+  width: 250px;
+  margin-top: 50px;
   transition: 2s;
-  background: linear-gradient(90deg, #ffffff 0%, #5f82f8 29%, #333a66  87%, #000000 100%);
+  border-radius:25px;
+  font-size: 1.8rem;
+  font-family: 'Codec Pro', sans-serif;
+  font-weight: 700;
+  background: linear-gradient(90deg, #d7e7ff 0%, #7a9cff 33%, #4367ff 50%, #2c3b80 75%, #202020 100%);
+}
+
+.button_join img {
+  width: 45px;
+  height: 45px;
+  align-items:flex-start;
+  margin-left: 5px;
+  transition: 2s;
+  margin-bottom: 10px;;
 }
 
 
 .button_join:hover {
-  width: 250px;
+  width: 300px;
   transition: 2s;
   box-shadow: 0 0 10px var(--dark-blue-color);
 }
@@ -665,7 +710,7 @@ img {
 .small-bulb-icon {  
   position: relative;
   top: 10px;
-  right: -62rem;
+  left: 71.5rem;
   width: 40px;
   height: auto;
   z-index: 1;
